# colorpy

./: blackbody.py  illuminants.py  pyproject.toml  rayleigh.py  test_ciexyz.py  test_illuminants.py  test_thinfilm.py  thinfilm.py
colorpy/: ciexyz.py  colormodels.py  misc.py  plots.py  test_blackbody.py  test_colormodels.py  test_rayleigh.py
