[tool.poetry]
name = "colorpy"
version = "0.1.0"
description = "Python3 fork of colorpy (Mark Kness)"
authors = ["Martyn"]
license = "GPL v3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
